
[project]

name = "nspawn"
description = "Containers with systemd-nspawn"
version = "0.8.4"
# dynamic = [	"version" ] # TODO

requires-python = ">=3.11"

readme = "readme.md"
license.file = "licence"

keywords = [
    "nspawn",
    "container",
    "systemd",
    "systemd-nspawn",
]

authors = [
    { name="Andrei Pozolotin", email="andrei.pozolotin@gmail.com" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Topic :: System :: Systems Administration",
  "Topic :: Terminals",
  "Topic :: Utilities",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]

dependencies = [
  "pyyaml>=6",
  "jinja2>=3",
]

[project.optional-dependencies]
test = [
  "tox",
  "pytest",
]

[project.urls]
Source = "https://github.com/random-python/nspawn"
Homepage = "https://github.com/random-python/nspawn"
Documentation = "https://github.com/random-python/nspawn"

[project.scripts]
nspawn-build = "nspawn.app.engine.build:main"
nspawn-setup = "nspawn.app.engine.setup:main"
nspawn-hatch = "nspawn.app.hatcher.main:main"
nspawn-enter = "nspawn.app.nsenter.main:main"

[build-system]

requires = [
	"setuptools>=76", 
	"setuptools_scm>=8",
]

build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [ "src/main" ]
include = ["nspawn*"] 
namespaces = false

[tool.setuptools_scm]
# enable
