[metadata]

name = nspawn
version = 0.6.16

requires-python = >=3.8

author = Andrei Pozolotin
author-email = andrei.pozolotin@gmail.com

summary = Containers with systemd-nspawn

description-file = readme.md
description-content-type = text/markdown; charset=UTF-8

home-page = https://github.com/random-python/nspawn

license = Apache-2

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: System :: Systems Administration
    Topic :: Terminals
    Topic :: Utilities


keywords =
    nspawn
    container
    systemd
    systemd-nspawn

[files]


[options]

packages =
    nspawn
    nspawn_test

package_dir =
    nspawn      = src/main/nspawn
    nspawn_test = src/test/nspawn_test

[entry_points]

console_scripts =
    nspawn-build = nspawn.app.engine.build:main
    nspawn-setup = nspawn.app.engine.setup:main
    nspawn-hatch = nspawn.app.hatcher.main:main
    nspawn-enter = nspawn.app.nsenter.main:main

[pbr]

warnerrors = True
skip_authors = True
skip_git_sdist = False
skip_changelog = True

[build_reno]

rel-notes-dir = reno
output-file = RELEASE.rst
